# python-termii

./: .gitignore  DEVELOPMENT.md  LICENSE  README.md  pyproject.toml  setup.cfg.backup  test_data.py
.github/workflows/: python-termii.yml
termii_py/: __init__.py  client.py  config.py  exception.py
termii_py/http/: __init__.py  request_handler.py  request_response.py
termii_py/services/: __init__.py  campaign.py  contact.py  message.py  number.py  phonebook.py  sender_id.py  template.py
termii_py/value_object/: __init__.py  phone_number.py
