[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-termii"
dynamic = ["version"]
authors = [
    { name = "Samuel Doghor Destiny", email = "labs@amdoghor.com" }
]
description = "A clean Python SDK for the Termii API (SMS, Voice, and OTP)"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["termii", "whatsapp", "sms", "otp", "sdk", "python", "library"]
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests",
    "python-dotenv"
]

[project.urls]
Homepage = "https://github.com/samdoghor/python-termii"
Repository = "https://github.com/samdoghor/python-termii"

[tool.setuptools.dynamic]
version = { attr = "termii_py.__version__" }

[tool.setuptools.packages.find]
where = ["."]
include = ["termii_py*"]

[tool.setuptools.package-data]
termii_py = ["py.typed"]